--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://admin:admin123@cluster0.8qp1aja.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://admin:admin@clusterreact.g8d8jna.mongodb.net/?retryWrites=true&w=majority
